# aiopmtiles

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGES.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy_mkdocs.yml
aiopmtiles/: __init__.py  aiopmtiles.py  io.py
aiopmtiles/scripts/: __init__.py  cli.py
aiopmtiles/templates/: index.html
contributing/: index.html
docs/: mkdocs.yml
docs/docs/: usage.md
release-notes/: index.html
search/: search_index.json
tests/: __init__.py  test_io.py  test_reader.py
usage/: index.html
